<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zjffdu.tutorial</groupId>
    <artifactId>spark-tutorial</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>1.8</java.version>
        <spark.version>1.6.3</spark.version>
        <spark.scope>provided</spark.scope>
        <hadoop.version>2.6.0</hadoop.version>
        <jetty.version>9.2.10.v20150310</jetty.version>
        <scala.binary.version>2.10</scala.binary.version>
        <scala.version>2.10.5</scala.version>
        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
        <scalatest.version>2.2.4</scalatest.version>
    </properties>

    <dependencies>

        <!--<dependency>-->
            <!--<groupId>org.apache.commons</groupId>-->
            <!--<artifactId>commons-exec</artifactId>-->
            <!--<version>1.3</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.apache.httpcomponents</groupId>-->
            <!--<artifactId>httpclient</artifactId>-->
            <!--<version>4.5.1</version>-->
        <!--</dependency>-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-core_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-streaming_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-sql_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-hive_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-yarn_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-mllib_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>spark-repl_${scala.binary.version}</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>${spark.version}</version>&ndash;&gt;-->
            <!--&lt;!&ndash;<scope>${spark.scope}</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scala-library</artifactId>-->
            <!--<version>${scala.version}</version>-->
            <!--<scope>compile</scope>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scala-compiler</artifactId>-->
            <!--<version>${scala.version}</version>-->
            <!--<scope>compile</scope>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scala-reflect</artifactId>-->
            <!--<version>${scala.version}</version>-->
            <!--<scope>compile</scope>-->
        <!--</dependency>-->


        <!--<dependency>-->
            <!--<groupId>com.mashape.unirest</groupId>-->
            <!--<artifactId>unirest-java</artifactId>-->
            <!--<version>1.4.7</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>xml-apis</groupId>-->
            <!--<artifactId>xml-apis</artifactId>-->
            <!--<version>1.4.01</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>javax.servlet</groupId>-->
            <!--<artifactId>javax.servlet-api</artifactId>-->
            <!--<version>${javax.servlet-api.version}</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.apache.hive</groupId>-->
            <!--<artifactId>hive-jdbc</artifactId>-->
            <!--<version>1.2.1</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>com.google.code.gson</groupId>-->
            <!--<artifactId>gson</artifactId>-->
            <!--<version>2.8.0</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>io.continuum.bokeh</groupId>-->
            <!--<artifactId>bokeh_2.10</artifactId>-->
            <!--<version>0.5</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.scalanlp</groupId>-->
            <!--<artifactId>breeze_2.10</artifactId>-->
            <!--<version>0.5</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.scalanlp</groupId>-->
            <!--<artifactId>breeze-viz_2.10</artifactId>-->
            <!--<version>0.5</version>-->
        <!--</dependency>-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.clapper</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>javautil</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>3.1.3</version>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.flink</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>flink-core</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>1.0.3</version>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
            <!--&lt;!&ndash;<groupId>org.apache.flink</groupId>&ndash;&gt;-->
            <!--&lt;!&ndash;<artifactId>flink-java</artifactId>&ndash;&gt;-->
            <!--&lt;!&ndash;<version>1.0.3</version>&ndash;&gt;-->
        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->

        <!--<dependency>-->
            <!--<groupId>org.apache.pig</groupId>-->
            <!--<artifactId>pig</artifactId>-->
            <!--<classifier>h2</classifier>-->
            <!--<version>0.16.0</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.apache.shiro</groupId>-->
            <!--<artifactId>shiro-core</artifactId>-->
            <!--<version>1.2.2</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-http</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-continuation</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-servlet</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-servlets</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-proxy</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-client</artifactId>-->
            <!--<version>${jetty.version}</version>-->
            <!--<scope>provided</scope>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-util</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-security</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-plus</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-server</artifactId>-->
            <!--<version>${jetty.version}</version>-->
        <!--</dependency>-->

        <!--&lt;!&ndash;test libraries&ndash;&gt;-->
        <!--<dependency>-->
            <!--<groupId>org.scalatest</groupId>-->
            <!--<artifactId>scalatest_2.11</artifactId>-->
            <!--<version>${scalatest.version}</version>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.elasticsearch.client</groupId>-->
            <!--<artifactId>elasticsearch-rest-client</artifactId>-->
            <!--<version>5.6.3</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.apache.kafka</groupId>-->
            <!--<artifactId>kafka-clients</artifactId>-->
            <!--<version>0.11.0.1</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.apache.thrift</groupId>
            <artifactId>libthrift</artifactId>
            <version>0.9.2</version>
        </dependency>
    </dependencies>


    <!--<repositories>-->
        <!--<repository>-->
            <!--<id>hwx-private</id>-->
            <!--<url>http://nexus-private.hortonworks.com/nexus/content/groups/public</url>-->
        <!--</repository>-->
        <!--<repository>-->
            <!--<snapshots>-->
                <!--<enabled>false</enabled>-->
            <!--</snapshots>-->
            <!--<id>central</id>-->
            <!--<name>bintray</name>-->
            <!--<url>http://jcenter.bintray.com</url>-->
        <!--</repository>-->

        <!--<repository>-->
            <!--<id>ossrh</id>-->
            <!--<name>ossrh repository</name>-->
            <!--<url>https://oss.sonatype.org/content/repositories/releases/</url>-->
            <!--<releases>-->
                <!--<enabled>true</enabled>-->
            <!--</releases>-->
            <!--<snapshots>-->
                <!--<enabled>false</enabled>-->
            <!--</snapshots>-->
        <!--</repository>-->
    <!--</repositories>-->

    <build>

        <plugins>

            <!--<plugin>-->
                <!--<groupId>org.scalatest</groupId>-->
                <!--<artifactId>scalatest-maven-plugin</artifactId>-->
                <!--<configuration>-->
                    <!--<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>-->
                    <!--<junitxml>.</junitxml>-->
                    <!--<filereports>WDF TestSuite.txt</filereports>-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>test</id>-->
                        <!--<goals>-->
                            <!--<goal>test</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.0.5.v20130815</version>
            </plugin>

            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.apache.spark:*</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <id>eclipse-add-source</id>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile-first</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-scaladocs</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>doc-jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>2.11</scalaVersion>
                    <!--<recompileMode>incremental</recompileMode>-->
                    <!--<useZincServer>true</useZincServer>-->
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms1024m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                        <!--<jvmArg>-XX:PermSize=${PermGen}</jvmArg>-->
                        <!--<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>-->
                    </jvmArgs>
                    <javacArgs>
                        <javacArg>-source</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-target</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-Xlint:all,-serial,-path,-options</javacArg>
                    </javacArgs>
                </configuration>
            </plugin>
        </plugins>

    </build>

</project>